--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'io.franzbecker.gradle-lombok' version '1.8'
     id 'java'
     id 'groovy'
+    id "org.sonarqube" version "2.5"
 }
 
 group 'pl.khuzzuk'
