--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
     }
 }
 
-sourceSets {
+/*sourceSets {
     main {
         java {
             srcDirs = ['src/main/java']
@@ -30,10 +30,10 @@ sourceSets {
             srcDirs = ['src/test/java', 'src/test/ui']
         }
     }
-}
+}*/
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    compile "org.codehaus.groovy:groovy-all:2.4.10"
     compile group: 'pl.khuzzuk', name: 'message-bus', version: '1.5.0'
 
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
