--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,12 @@ repositories {
     maven {
         url "https://raw.github.com/khuzzuk/MessageBus/mvn-repo/"
     }
+    maven {
+        url "https://raw.github.com/khuzzuk/functional-logic/mvn-repo/"
+    }
 }
 
-/*sourceSets {
+sourceSets {
     main {
         java {
             srcDirs = ['src/main/java']
@@ -30,11 +33,12 @@ repositories {
             srcDirs = ['src/test/java', 'src/test/ui']
         }
     }
-}*/
+}
 
 dependencies {
     compile "org.codehaus.groovy:groovy-all:2.4.10"
     compile group: 'pl.khuzzuk', name: 'message-bus', version: '1.5.0'
+    compile group: 'pl.khuzzuk', name: 'functional-logic', version: '0.1.0'
 
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
 }
